--- a/index.mdx
+++ b/index.mdx
@@ -1,18 +1,18 @@
 ---
 title: "Introduction"
-description: "Welcome to the new home for your documentation"
+description: "Welcome to the HubSpot e-conomic Integration Setup Guide. This comprehensive resource will guide you through the process of connecting your HubSpot and e-conomic accounts, enabling seamless data synchronization and workflow automation between these powerful platforms."
 ---
 
-## Setting up
+## Integration benefits
 
-Get your documentation site up and running in minutes.
+By integrating HubSpot with e-conomic, your organization can
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
+- Automate invoice generation based on HubSpot deal stages
+- Ensure real-time synchronization of customer data across both platforms
+- Access up-to-date financial insights directly within HubSpot
+- Significantly reduce time spent on manual data entry and reconciliation
+
+<Card title="Start here" icon="rocket" iconType="regular" horizontal={false} href="/quickstart">
   Follow our three step quickstart guide.
 </Card>
 
@@ -21,32 +21,16 @@ Get your documentation site up and running in minutes.
 Design a docs site that looks great and empowers your users.
 
 <Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
+  <Card title="Edit locally" icon="pen-to-square" href="/development">
     Edit your docs locally and preview them in real time.
   </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
+  <Card title="Customize your site" icon="palette" href="/essentials/settings">
     Customize the design and colors of your site to match your brand.
   </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
+  <Card title="Set up navigation" icon="map" href="/essentials/navigation">
     Organize your docs to help users find what they need and succeed with your product.
   </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
+  <Card title="API documentation" icon="terminal" href="/api-reference/introduction">
     Auto-generate API documentation from OpenAPI specifications.
   </Card>
 </Columns>
@@ -56,42 +40,22 @@ Design a docs site that looks great and empowers your users.
 Everything you need to create world-class documentation.
 
 <Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
+  <Card title="Write with MDX" icon="pen-fancy" href="/essentials/markdown">
     Use MDX to style your docs pages.
   </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
+  <Card title="Code samples" icon="code" href="/essentials/code">
     Add sample code to demonstrate how to use your product.
   </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
+  <Card title="Images" icon="image" href="/essentials/images">
     Display images and other media.
   </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
+  <Card title="Reusable snippets" icon="recycle" href="/essentials/reusable-snippets">
     Write once and reuse across your docs.
   </Card>
 </Columns>
 
 ## Need inspiration?
 
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
+<Card title="See complete examples" icon="stars" href="https://mintlify.com/customers">
   Browse our showcase of exceptional documentation sites.
 </Card>
