Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -12,11 +12,19 @@ By integrating HubSpot with e-conomic, your organization can
 - Access up-to-date financial insights directly within HubSpot
 - Significantly reduce time spent on manual data entry and reconciliation
 
-<Card title="Start here" icon="rocket" iconType="regular" horizontal={false} href="/quickstart">
-  Follow our three step quickstart guide.
+<Card title="Installation Process" icon="computer" iconType="light" horizontal href="/quickstart">
+  Connect Visma e-conomic
 </Card>
 
 ## Make it yours
+
+<img
+  src="/example-image.avif"
+  alt="Main dashboard interface"
+  style={{ height:"auto",width:"auto" }}
+  className="rounded-lg"
+  title=""
+/>
 
 Design a docs site that looks great and empowers your users.
 
