Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -21,7 +21,7 @@ By integrating HubSpot with e-conomic, your organization can
 <img
   src="/example-image.avif"
   alt="Main dashboard interface"
-  style={{ height:"auto",width:"auto" }}
+  style={{ height:"400",width:"auto" }}
   className="rounded-lg"
   title=""
 />
