Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -18,13 +18,14 @@ By integrating HubSpot with e-conomic, your organization can
 
 ## Make it yours
 
-<img
-  src="/example-image.avif"
-  alt="Main dashboard interface"
-  style={{ height:"400",width:"auto" }}
-  className="rounded-lg"
-  title=""
-/>
+<Frame>
+  <img
+    src="/example-image.avif"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 Design a docs site that looks great and empowers your users.
 
