Documentation edits made through Mintlify web editor

--- a/getting-started/introduction.mdx
+++ b/getting-started/introduction.mdx
@@ -3,6 +3,8 @@ title: "Introduction"
 description: "Welcome to the HubSpot e-conomic Integration Setup Guide. This comprehensive resource will guide you through the process of connecting your HubSpot and e-conomic accounts, enabling seamless data synchronization and workflow automation between these powerful platforms."
 ---
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/4KzFe50RQkQ" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen style={{ width:"100%",borderRadius:"0.5rem" }} />
+
 ## Integration Benefits
 
 By integrating HubSpot with e-conomic, your organization can
@@ -12,7 +14,7 @@ By integrating HubSpot with e-conomic, your organization can
 - Access up-to-date financial insights directly within HubSpot
 - Significantly reduce time spent on manual data entry and reconciliation
 
-### Data Flow between Visma e-conomic and HubSpot
+## Data Flow between Visma e-conomic and HubSpot
 
 The table below shows what data is synced between HubSpot and Visma e-conomic. The data flow is largely unidirectional from HubSpot to Visma e-conomic except for the invoice/order PDF copy imported back into HubSpot as well as up-to-date booked-invoice data synced into HubSpot.
 
@@ -24,7 +26,3 @@ The table below shows what data is synced between HubSpot and Visma e-conomic. T
     title=""
   />
 </Frame>
-
-<Card title="See complete examples" icon="stars" href="https://mintlify.com/customers">
-  Browse our showcase of exceptional documentation sites.
-</Card>
