--- a/installation/invoice-sync-rules.mdx
+++ b/installation/invoice-sync-rules.mdx
@@ -22,4 +22,10 @@ description: "Customize how invoices or orders are generated in e-conomic by lin
   <Step title="Select the Deal Stage from the drop-down menu">
     Here, you select the particular stage within the sales pipeline that will trigger the creation of an invoice or order in e-conomic. This ensures the invoicing process aligns perfectly with your established sales flow.
   </Step>
+  <Step title="New Step">
+    This action involves creating a draft invoice/order as per the requirement.
+  </Step>
+  <Step title="New Step">
+    After selecting the required options, click **"Add Pipeline"**
+  </Step>
 </Steps>
