Documentation edits made through Mintlify web editor

--- a/installation/invoice-sync-rules.mdx
+++ b/installation/invoice-sync-rules.mdx
@@ -10,6 +10,7 @@ description: "Customize how invoices or orders are generated in e-conomic by lin
     <Note>
       Feel free to click [**Get Guided Installation**](https://meetings.hubspot.com/cloudify/app-assistance) if you require assistance from Cloudify experts regarding the installation steps
     </Note>
+    
     <Frame>
       <img
         src="/example-image.avif"
@@ -21,6 +22,16 @@ description: "Customize how invoices or orders are generated in e-conomic by lin
   </Step>
   <Step title="Select the Deal Stage from the drop-down menu">
     Here, you select the particular stage within the sales pipeline that will trigger the creation of an invoice or order in e-conomic. This ensures the invoicing process aligns perfectly with your established sales flow.
+
+    <Frame>
+      <img
+        src="/example-image.avif"
+        alt="Screenshot of a deployment confirmation message that says All checks have passed."
+        style={{ borderRadius:"0.5rem" }}
+        title=""
+      />
+    </Frame>
+    
   </Step>
   <Step title="New Step">
     This action involves creating a draft invoice/order as per the requirement.
