Documentation edits made through Mintlify web editor

--- a/installation/customer-search-rules.mdx
+++ b/installation/customer-search-rules.mdx
@@ -16,7 +16,7 @@ From the first drop-down menu, select the HubSpot field that matches the chosen 
   />
 </Frame>
 
-**B2C Sync Activation and enable primary contact sync**
+### **B2C Sync Activation and enable primary contact sync**
 
 This feature is essential for businesses dealing directly with consumers, allowing seamless addition of individual contacts from HubSpot to e-conomic as customers when there's no associated company. Therefore, if this is the case, check “B2C Sync Activation and enable primary contact sync” and select the parameters from the HubSpot and e-conomic dropdown boxes. Click "**Next**".
 
