--- a/installation/product-rules.mdx
+++ b/installation/product-rules.mdx
@@ -3,7 +3,7 @@ title: "Product Rules"
 description: "Product Sync Rules define how products from HubSpot are matched with those in e-conomic, enabling a simple field-based matching or a direct connection without searching to ensure accurate product syncing and invoicing."
 ---
 
-**Simple Search**
+## Simple Search
 
 This feature is used to match products between HubSpot and e-conomic by correlating a specific field, such as SKU or product number. It's particularly useful for users who have long product lists. Choose the corresponding field in HubSpot and e-conomic for automatic identification from the respective dropdowns.
 
@@ -16,7 +16,7 @@ This feature is used to match products between HubSpot and e-conomic by correlat
   />
 </Frame>
 
-**Direct Link**
+### Direct Link
 
 You can connect products directly without searching. This option is useful for users who have short product lists. Map the Hubspot fields with the e-conomic fields and click **"Save Mappings".**
 
@@ -29,13 +29,13 @@ You can connect products directly without searching. This option is useful for u
   />
 </Frame>
 
-### **Advance Settings**
+## Advance Settings
 
 This option is useful when a product is not found in the search. It offers three options, which are:
 
 **Skip Invoice Generation:** Select this option if you prefer not to create an invoice when a product isn't found in e-conomic.
 
-**Use a Default Product: **When a product is not found in the e-conomic, it will use a default product from the e-conomic for generating the invoice. If you select this option, you must specify a default product from your e-conomic product list.
+\*\*Use a Default Product: \*\*When a product is not found in the e-conomic, it will use a default product from the e-conomic for generating the invoice. If you select this option, you must specify a default product from your e-conomic product list.
 
 **Create a new product in e-conomic**: This option is for automatically generating a new product entry in e-conomic when a matching item isn't found, using product details from HubSpot. You must specify the product group to ensure the new product aligns with the correct category in e-conomic. Select the product group and click "**Finish**".
 
