Documentation edits made through Mintlify web editor

--- a/installation/connect-e-conomic.mdx
+++ b/installation/connect-e-conomic.mdx
@@ -3,6 +3,8 @@ title: "Connect Visma e-conomic"
 description: "Installation process"
 ---
 
+## Installation process
+
 <Steps>
   <Step title="Step 1">
     Log in to your HubSpot account and search for the\*\*‘Visma e-conomic sync\*\* ’ app in HubSpot Marketplace. If you have already logged in to your Hubspot account, visit the application link directly.
@@ -101,3 +103,5 @@ description: "Installation process"
     </Frame>
   </Step>
 </Steps>
+
+## Connecting e-conomic account
