--- a/installation/product-rules.mdx
+++ b/installation/product-rules.mdx
@@ -16,7 +16,7 @@ This feature is used to match products between HubSpot and e-conomic by correlat
   />
 </Frame>
 
-### Direct Link
+## Direct Link
 
 You can connect products directly without searching. This option is useful for users who have short product lists. Map the Hubspot fields with the e-conomic fields and click **"Save Mappings".**
 
@@ -33,12 +33,18 @@ You can connect products directly without searching. This option is useful for u
 
 This option is useful when a product is not found in the search. It offers three options, which are:
 
-**Skip Invoice Generation:** Select this option if you prefer not to create an invoice when a product isn't found in e-conomic.
+### Skip Invoice Generation 
 
-\*\*Use a Default Product: \*\*When a product is not found in the e-conomic, it will use a default product from the e-conomic for generating the invoice. If you select this option, you must specify a default product from your e-conomic product list.
+Select this option if you prefer not to create an invoice when a product isn't found in e-conomic.
 
-**Create a new product in e-conomic**: This option is for automatically generating a new product entry in e-conomic when a matching item isn't found, using product details from HubSpot. You must specify the product group to ensure the new product aligns with the correct category in e-conomic. Select the product group and click "**Finish**".
+### Use a Default Product
 
-### **Sync deals which do not have products associated with them**
+When a product is not found in the e-conomic, it will use a default product from the e-conomic for generating the invoice. If you select this option, you must specify a default product from your e-conomic product list.
+
+### Create a new product in e-conomic
+
+This option is for automatically generating a new product entry in e-conomic when a matching item isn't found, using product details from HubSpot. You must specify the product group to ensure the new product aligns with the correct category in e-conomic. Select the product group and click "**Finish**".
+
+## Sync deals which do not have products associated with them
 
 This option is applicable when there are no products in a deal, and the user wants to sync the deal. You can check this option. Select the product and click "**Finish**".
